--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
               <div class="cardBox__imgContainer">
                 <img class="cradBox__img cardBox__img--you" src="./assets/images/thinking.png" alt="" />
               </div>
-              <p class="cardBox__hand cardBox__hand--you">グー</p>
+              <p class="cardBox__hand cardBox__hand--you">考え中...</p>
             </div>
             <div class="cardBox cardBox--cpu">
               <p class="cardBox__title cardBox__title--cpu">CPUの手</p>
               <div class="cardBox__imgContainer">
                 <img class="cardBox__img cardBox__img--cpu" src="./assets/images/thinking.png" alt="" />
               </div>
-              <p class="cardBox__hand cardBox__hand--cpu">グー</p>
+              <p class="cardBox__hand cardBox__hand--cpu">考え中...</p>
             </div>
           </div>
           <p class="card__result"></p>
