learn array for statement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="cardBox cardBox--you">
               <p class="cardBox__title cardBox__title--you">あなたの手</p>
               <div class="cardBox__imgContainer">
-                <img class="cradBox__img cardBox__img--you" src="./assets/images/thinking.png" alt="" />
+                <img class="cardBox__img cardBox__img--you" src="./assets/images/thinking.png" alt="" />
               </div>
               <p class="cardBox__hand cardBox__hand--you">考え中...</p>
             </div>
