--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <p class="card__title">じゃんけん...</p>
           <div class="card__wrapper">
             <div class="cardBox cardBox--you">
-              <p class="cardBox__title cardBox__title--you">あなたの手</p>
+              <p class="cardBox__title cardBox__title--you">あなた</p>
               <div class="cardBox__imgContainer">
                 <img class="cardBox__img cardBox__img--you" src="./assets/images/thinking.png" alt="" />
               </div>
               <p class="cardBox__hand cardBox__hand--you">考え中...</p>
             </div>
             <div class="cardBox cardBox--cpu">
-              <p class="cardBox__title cardBox__title--cpu">CPUの手</p>
+              <p class="cardBox__title cardBox__title--cpu">CPU</p>
               <div class="cardBox__imgContainer">
                 <img class="cardBox__img cardBox__img--cpu" src="./assets/images/thinking.png" alt="" />
               </div>
