--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>じゃんけんゲーム</title>
+    <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
@@ -20,14 +21,14 @@
               <div class="cardBox__imgContainer">
                 <img class="cardBox__img cardBox__img--you" src="./assets/images/thinking.png" alt="" />
               </div>
-              <p class="cardBox__hand cardBox__hand--you">考え中...</p>
+              <p class="cardBox__hand cardBox__hand--you">かんがえちゅう...</p>
             </div>
             <div class="cardBox cardBox--cpu">
               <p class="cardBox__title cardBox__title--cpu">CPU</p>
               <div class="cardBox__imgContainer">
                 <img class="cardBox__img cardBox__img--cpu" src="./assets/images/thinking.png" alt="" />
               </div>
-              <p class="cardBox__hand cardBox__hand--cpu">考え中...</p>
+              <p class="cardBox__hand cardBox__hand--cpu">かんがえちゅう...</p>
             </div>
           </div>
           <p class="card__result"></p>
@@ -56,7 +57,7 @@
         <ul class="navigation__list navigation__list--restart">
           <li>
             <button class="navigation__button navigation__button--restart">
-              もう一度
+              もういちど
             </button>
           </li>
         </ul>
