--- a/index.html
+++ b/index.html
@@ -39,17 +39,24 @@
           <li>
             <button
               class="navigation__button navigation__button--rock"
+              data-hand="rock"
             >
               グー
             </button>
           </li>
           <li>
-            <button class="navigation__button navigation__button--scissors">
+            <button
+              class="navigation__button navigation__button--scissors"
+              data-hand="scissors"
+            >
               チョキ
             </button>
           </li>
           <li>
-            <button class="navigation__button navigation__button--paper">
+            <button
+              class="navigation__button navigation__button--paper"
+              data-hand="paper"
+            >
               パー
             </button>
           </li>
