--- a/index.html
+++ b/index.html
@@ -39,24 +39,17 @@
           <li>
             <button
               class="navigation__button navigation__button--rock"
-              data-hand="rock"
             >
               グー
             </button>
           </li>
           <li>
-            <button
-              class="navigation__button navigation__button--scissors"
-              data-hand="scissors"
-            >
+            <button class="navigation__button navigation__button--scissors">
               チョキ
             </button>
           </li>
           <li>
-            <button
-              class="navigation__button navigation__button--paper"
-              data-hand="paper"
-            >
+            <button class="navigation__button navigation__button--paper">
               パー
             </button>
           </li>
